# development-libraries

./: .gitignore  .gitmodules  README.md
FlightGearLib/: FlightGearLib.cpp  FlightGearLib_lib.xml  FlightGearPositionOrientation.hpp  FlightGearPositionOrientation.xml  FlightGearWeather.hpp  FlightGearWeather.xml  hopsan.xml
NoiseLib/: Noise.cpp  Noise_lib.xml  Simplex1D_validation.hvc  Simplex1D_validation.hvd  noiseSeed.hpp  noiseSeed.md  noiseSeed.xml  noiseSimplex1D.hpp  noiseSimplex1D.md  noiseSimplex1D.xml  noiseSimplex4D.hpp  noiseSimplex4D.md  noiseSimplex4D.xml  noiseVariableSimplex1D.hpp  noiseVariableSimplex1D.md  noiseVariableSimplex1D.xml  simplex_4d_Validation.hvc  simplex_4d_Validation.hvd
devPneumatic/: Pneumatic.cc  Pneumatic.pro  Pneumatic.xml  PneumaticComponents.pptx  PneumaticCompressor.hpp  PneumaticCompressor.nb  PneumaticCompressor.xml  PneumaticConnector.nb  PneumaticExhaust.nb  PneumaticPCIvalve32.hpp  PneumaticPCIvalve32.nb  PneumaticPCIvalve32.xml  PneumaticPCvalve32.hpp  PneumaticPCvalve32.nb  PneumaticPCvalve32.xml  PneumaticPiston1.xml  PneumaticPistonMass.hpp  PneumaticPistonMass.nb  PneumaticPistonMass.xml  PneumaticPistonSASpringMass.hpp  PneumaticPistonSASpringMass.nb  PneumaticPistonSASpringMass.xml  PneumaticPistonSpringMass.hpp  PneumaticPistonSpringMass.nb  PneumaticPistonSpringMass.xml  PneumaticPsource.hpp  (+35 more)
diff/: CMakeLists.txt  SignalDifference.hpp  SignalDifference.xml  SignalDifferentiator.hpp  SignalDifferentiator.xml  compile.bat  diff.cpp  diffDiff.hpp  diffDiff.xml  diffDifft.hpp  diffDifft.xml  diff_lib.xml  test.hmf
(+146 files in other folders)
